Updating validation behavior to be more performent